<resources>
    <string name="app_name">GreetCreate</string>
    <string name="first_greeting_card_title">Swirls and Frames Purple - Wedding Invitation</string>
    <string name="create">Create</string>
    <string name="second_greeting_card_title">Invitation Card</string>
    <string name="third_greeting_card_title">Christmas Card</string>
    <string name="list_of_greeting_card">List of Greeting Card</string>
    <string name="create_greeting_card">Create Greeting Card</string>
    <string name="title">Title</string>
    <string name="content">Content</string>
    <string name="save">Save</string>
</resources>